--- a/LogicManager/LogicManager.vcxproj.filters
+++ b/LogicManager/LogicManager.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="Classes\proto\PingInfo.cpp">
       <Filter>源文件\Classes\proto</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\common\CLog.cpp">
+      <Filter>源文件\Classes\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -244,6 +247,9 @@
     </ClInclude>
     <ClInclude Include="Classes\proto\PingInfo.h">
       <Filter>源文件\Classes\proto</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\common\CLog.h">
+      <Filter>源文件\Classes\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
